Proofread text and messages inserted by the LaTeX class

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2492,8 +2492,8 @@ Computing Machinery]
   \SetWatermarkFontSize{0.5in}
   \SetWatermarkColor[gray]{.9}
   \SetWatermarkText{\parbox{12em}{\centering
-      Unpublished working draft\\ 
-      Not for distribution}}
+      Unpublished working draft.\\ 
+      Not for distribution.}}
 \fi
 %    \end{macrocode}
 % 
@@ -4508,8 +4508,7 @@ Computing Machinery]
   \footnotetextcopyrightpermission{%
     \if@ACM@authordraft
         \raisebox{-2ex}[\z@][\z@]{\makebox[0pt][l]{\large\bfseries 
-            Unpublished
-            working draft. Not for distribution}}% 
+            Unpublished working draft. Not for distribution.}}% 
        \color[gray]{0.9}%
     \fi
     \parindent\z@\parskip0.1\baselineskip
@@ -4527,7 +4526,7 @@ Computing Machinery]
      \@copyrightyear.\
     \fi
     \if@ACM@manuscript
-      Manuscript submitted to ACM\\
+      Manuscript submitted to the ACM\\
     \else
       \if@ACM@authorversion
           This is the author's version of the work. It is posted here for
@@ -5715,7 +5714,7 @@ Computing Machinery]
   \relax % manuscript
     \fancyhead[L]{\ACM@linecountL}%
     \fancyfoot[RO,LE]{\if@ACM@printfolios\small\thepage\fi}%
-    \fancyfoot[RE,LO]{\footnotesize Manuscript submitted to ACM}%
+    \fancyfoot[RE,LO]{\footnotesize Manuscript submitted to the ACM}%
   \or % acmsmall
     \fancyfoot[RO,LE]{\footnotesize \@journalName, Vol. \@acmVolume, No.
     \@acmNumber, Article \@acmArticle.  Publication date:
@@ -5746,7 +5745,7 @@ Computing Machinery]
   \if@ACM@timestamp
     \ifnum\ACM@format@nr=0\relax % Manuscript
     \fancyfoot[LO,RE]{\ACM@timestamp\quad
-      \footnotesize Manuscript submitted to ACM}
+      \footnotesize Manuscript submitted to the ACM}
     \else
     \fancyfoot[LO,RE]{\ACM@timestamp}
     \fi
