Removed unneeded comment

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2661,7 +2661,7 @@ Computing Machinery]
       \normalcolor
       \unvbox\@mpfootins
     \fi
-    \@minipagefalse   %% added 24 May 89
+    \@minipagefalse
   \color@endgroup
   \egroup
   \expandafter\@iiiparbox\@mpargs{\unvbox\@tempboxa}}
