Typo in class definition: "of" -> "for" and inserted "the".

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1652,7 +1652,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2017/09/09 v1.48 Typesetting articles for Association of
+[2017/09/09 v1.48 Typesetting articles for the Association for
 Computing Machinery]
 %    \end{macrocode}
 %
