--- a/README
+++ b/README
@@ -158,3 +158,5 @@ Version 1.47    New journal:  THRI
 
 Version 1.48    Bug fixes
 		Review mode now switches on folios
+		Code prettying (Michael D. Adams)
+		
