--- a/README
+++ b/README
@@ -159,4 +159,5 @@ Version 1.47    New journal:  THRI
 Version 1.48    Bug fixes
 		Review mode now switches on folios
 		Code prettying (Michael D. Adams)
+		Two-column formats now balance the last page (ACM request)
 		
