--- a/acmart.dtx
+++ b/acmart.dtx
@@ -195,6 +195,7 @@
 % \item \textsl{environ}, \url{http://www.ctan.org/pkg/environ}
 % \item \textsl{etoolbox}, \url{http://www.ctan.org/pkg/etoolbox}
 % \item \textsl{fancyhdr}, \url{http://www.ctan.org/pkg/fancyhdr}
+% \item \textsl{flushend}, \url{http://www.ctan.org/pkg/flushend}
 % \item \textsl{float}, \url{http://www.ctan.org/pkg/float}
 % \item \textsl{fontaxes}, \url{http://www.ctan.org/pkg/fontaxes}
 % \item \textsl{geometry}, \url{http://www.ctan.org/pkg/geometry}
@@ -2038,6 +2039,7 @@ Computing Machinery]
 %
 % \changes{v1.13}{2016/06/06}{Increased font size for ACM Large}
 % \changes{v1.38}{2017/05/13}{Increase default font size for SIGPLAN}
+% \changes{v1.48}{2017/09/16}{Added flushend for two-column formatting}
 %
 %
 % At this point we either have \cs{ACM@fontsize}, or use defaults
@@ -2068,6 +2070,27 @@ Computing Machinery]
 \LoadClass[\ACM@fontsize, reqno]{amsart}
 \RequirePackage{microtype}
 %    \end{macrocode}
+%
+% We use |flushend| for two-column formats.
+%    \begin{macrocode}
+\ifcase\ACM@format@nr
+ \relax % manuscript
+ \or % acmsmall
+ \or % acmlarge
+ \or % acmtog
+   \RequirePackage{flushend}
+ \or % sigconf
+   \RequirePackage{flushend}
+ \or % siggraph
+   \RequirePackage{flushend}
+ \or % sigplan
+   \RequirePackage{flushend}
+ \or % sigchi
+   \RequirePackage{flushend}
+ \or % sigchi-a
+\fi
+%    \end{macrocode}
+% 
 %
 % We need |etoolbox| for delayed code
 %    \begin{macrocode}
