--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2514,8 +2514,8 @@ Computing Machinery]
   \SetWatermarkFontSize{0.5in}
   \SetWatermarkColor[gray]{.9}
   \SetWatermarkText{\parbox{12em}{\centering
-      Unpublished working draft\\ 
-      Not for distribution}}
+      Unpublished working draft.\\
+      Not for distribution.}}
 \fi
 %    \end{macrocode}
 % 
@@ -4542,8 +4542,7 @@ Computing Machinery]
   \footnotetextcopyrightpermission{%
     \if@ACM@authordraft
         \raisebox{-2ex}[\z@][\z@]{\makebox[0pt][l]{\large\bfseries 
-            Unpublished
-            working draft. Not for distribution}}% 
+            Unpublished working draft. Not for distribution.}}%
        \color[gray]{0.9}%
     \fi
     \parindent\z@\parskip0.1\baselineskip
