--- a/acmart.dtx
+++ b/acmart.dtx
@@ -6104,8 +6104,9 @@ Computing Machinery]
   \@ifundefined{proposition}{%
   \newtheorem{proposition}[theorem]{Proposition}
   }{}
+  \@ifundefined{lemma}{%
   \newtheorem{lemma}[theorem]{Lemma}
-  \@ifundefined{lemma}{}{}
+  }{}
   \@ifundefined{corollary}{%
   \newtheorem{corollary}[theorem]{Corollary}
   }{}
