Deleted date for @MISC entries, close #201

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1722,6 +1722,8 @@ Computing Machinery]
 % \changes{v1.47}{2017/08/31}{New journal: THRI}
 % \changes{v1.48}{2017/09/09}{Typos fixed (Jamie Davis)}
 % \changes{v1.48}{2017/09/16}{Code prettying (Michael D.~Adams)}
+% \changes{v1.48}{2017/09/23}{Misc entries in the bibliography no
+% longer produce a separate date}
 %
 %
 % And the driver code:
