--- a/README
+++ b/README
@@ -159,4 +159,6 @@ Version 1.47    New journal:  THRI
 Version 1.48    Bug fixes
 		Review mode now switches on folios
 		Code prettying (Michael D. Adams)
+		Bibliography changes: @MISC entries no longer have a
+		separate date
 		
